# vocab-agent

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  deploy-duckdns-update.sh  deploy-update.sh  deploy.sh  electron-builder.yml  eslint.config.mjs  findings.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  progress.md  task_plan.md  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.pi-vocab/: models.json  settings.json
desktop-dist/: index.html
docs/: ai-sdk-reference.md.deprecated  developer-agent-test-cases.md  frontend-reference.md  project-architecture.md  self_evolving_english_agent_design_v2.md
e2e/: accessibility.spec.ts  auth.setup.ts  chat-interactions.spec.ts  command-rendering.spec.ts  command-system.spec.ts  error-handling.spec.ts  group-management.spec.ts  home.spec.ts  integration.spec.ts  login.spec.ts  manual-rich-text.spec.ts  message-list.spec.ts  navigation.spec.ts  pinned-sidebar.spec.ts  quick-lookup-comprehensive.spec.ts  quick-lookup.spec.ts  review-prompt.spec.ts  settings-comprehensive.spec.ts  settings-lite.spec.ts  settings.spec.ts  small-bubble-check.spec.ts  theme-toggle.spec.ts  word-card.spec.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/permissions/autogenerated/: check-server.toml  config-get.toml  config-set.toml  read-clipboard.toml  reminder-start.toml  reminder-stop.toml  set-quick-lookup-shortcut.toml
src-tauri/src/: lib.rs  store.rs  tray.rs
src-tauri/src/commands/: clipboard.rs  config.rs  mod.rs  notification.rs
(+208 files in other folders)
